# AnaGraph

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE.md  README.md
.github/ISSUE_TEMPLATE/: feature_request.md
dataset/: graph.txt  zackary_karate.txt
dataset/input/: edges.txt
include/: graph_interface.hpp  graph_parser.hpp  graph_utils.hpp  graph_writer.hpp  heterogeneous_graph.hpp  heterogeneous_graph_if.hpp  pagerank.hpp  similarity.hpp  supergraph.hpp  unweighted_graph.hpp  weighted_graph.hpp
include/anagraph/: algorithms.hpp  components.hpp  structures.hpp
include/anagraph/algorithms/: graph_hashes.hpp  pagerank.hpp  similarity.hpp
include/anagraph/components/: graph_interface.hpp  graph_parser.hpp  graph_writer.hpp  heterogeneous_graph.hpp  heterogeneous_graph_if.hpp  supergraph.hpp  unweighted_digraph.hpp  unweighted_edge.hpp  unweighted_graph.hpp  unweighted_hetero_digraph.hpp  unweighted_hetero_graph.hpp  unweighted_hetero_node.hpp  unweighted_node.hpp  weighted_digraph.hpp  weighted_directed_supergraph.hpp  weighted_edge.hpp  weighted_graph.hpp  weighted_hetero_digraph.hpp  weighted_hetero_graph.hpp  weighted_hetero_node.hpp  weighted_node.hpp  weighted_supergraph.hpp  weighted_supernode.hpp
include/anagraph/interfaces/: unweighted_digraph_interface.hpp  unweighted_edge_interface.hpp  unweighted_graph_interface.hpp  unweighted_hetero_digraph_interface.hpp  unweighted_hetero_graph_interface.hpp  unweighted_hetero_node_interface.hpp  unweighted_node_interface.hpp  weighted_digraph_interface.hpp  weighted_edge_interface.hpp  weighted_graph_interface.hpp  weighted_hetero_digraph_interface.hpp  weighted_hetero_graph_interface.hpp  weighted_hetero_node_interface.hpp  weighted_node_interface.hpp
include/anagraph/utils/: graph_utils.hpp
src/: CMakeLists.txt  graph_parser.cpp  graph_writer.cpp  heterogeneous_graph.cpp  pagerank.cpp  similarity.cpp  supergraph.cpp  unweighted_graph.cpp  weighted_graph.cpp
src/anagraph/: CMakeLists.txt
src/anagraph/algorithms/: CMakeLists.txt  pagerank.cpp  shingle.cpp  similarity.cpp
src/anagraph/components/: CMakeLists.txt  graph_parser.cpp  graph_writer.cpp  heterogeneous_graph.cpp  supergraph.cpp  unweighted_digraph.cpp  unweighted_graph.cpp  unweighted_hetero_digraph.cpp  unweighted_hetero_graph.cpp  unweighted_hetero_node.cpp  unweighted_node.cpp  weighted_digraph.cpp  weighted_directed_supergraph.cpp  weighted_graph.cpp  weighted_hetero_digraph.cpp  weighted_hetero_graph.cpp  weighted_hetero_node.cpp  weighted_node.cpp  weighted_supergraph.cpp  weighted_supernode.cpp
test/: CMakeLists.txt  logging_test.cpp  pagerank_test.cpp  similarity_test.cpp  unweighted_digraph_test.cpp  unweighted_graph_test.cpp  unweighted_hetero_digraph_test.cpp  unweighted_hetero_graph_test.cpp  unweighted_hetero_node_test.cpp  unweighted_node_test.cpp  weighted_digraph_test.cpp  weighted_graph_test.cpp  weighted_hetero_digraph_test.cpp  weighted_hetero_graph_test.cpp  weighted_hetero_node_test.cpp  weighted_node_test.cpp  weighted_superdigraph_test.cpp  weighted_supergraph_test.cpp  weighted_supernode_test.cpp
test/anagraph/: CMakeLists.txt
test/anagraph/algorithms/: CMakeLists.txt  pagerank_test.cpp  shingle_test.cpp  similarity_test.cpp
test/anagraph/components/: CMakeLists.txt  unweighted_digraph_test.cpp  unweighted_graph_test.cpp  unweighted_hetero_digraph_test.cpp  unweighted_hetero_graph_test.cpp  unweighted_hetero_node_test.cpp  unweighted_node_test.cpp  weighted_digraph_test.cpp  weighted_graph_test.cpp  weighted_hetero_digraph_test.cpp  weighted_hetero_graph_test.cpp  weighted_hetero_node_test.cpp  weighted_node_test.cpp  weighted_superdigraph_test.cpp  weighted_supergraph_test.cpp  weighted_supernode_test.cpp
