include(GoogleTest)

add_executable(log_test logging_test.cpp)
target_link_libraries(log_test spdlog::spdlog)
target_compile_features(log_test PUBLIC cxx_std_20)
target_compile_options(log_test PUBLIC -Wall)

# add_executable(hello_test hello_test.cpp)
# target_link_libraries(hello_test GTest::gtest_main)
# gtest_discover_tests(hello_test)

add_executable(weighted_node_test weighted_node_test.cpp)
target_link_libraries(weighted_node_test GTest::gtest_main graphcomponents)
target_compile_features(weighted_node_test PUBLIC cxx_std_20)
if (USE_ASAN)
    target_compile_options(weighted_node_test PUBLIC -Wall -fsanitize=address)
    target_link_options(weighted_node_test PUBLIC -fsanitize=address)
else()
    target_compile_options(weighted_node_test PUBLIC -Wall)
endif()
gtest_discover_tests(weighted_node_test)

add_executable(weighted_digraph_test weighted_digraph_test.cpp)
target_link_libraries(weighted_digraph_test GTest::gtest_main graphcomponents)
target_compile_features(weighted_digraph_test PUBLIC cxx_std_20)
if (USE_ASAN)
    target_compile_options(weighted_digraph_test PUBLIC -Wall -fsanitize=address)
    target_link_options(weighted_digraph_test PUBLIC -fsanitize=address)
else()
    target_compile_options(weighted_digraph_test PUBLIC -Wall)
endif()
gtest_discover_tests(weighted_digraph_test)

add_executable(weighted_graph_test weighted_graph_test.cpp)
target_link_libraries(weighted_graph_test GTest::gtest_main graphcomponents)
target_compile_features(weighted_graph_test PUBLIC cxx_std_20)
if (USE_ASAN)
    target_compile_options(weighted_graph_test PUBLIC -Wall -fsanitize=address)
    target_link_options(weighted_graph_test PUBLIC -fsanitize=address)
else()
    target_compile_options(weighted_graph_test PUBLIC -Wall)
endif()
gtest_discover_tests(weighted_graph_test)

add_executable(weighted_hetero_node_test weighted_hetero_node_test.cpp)
target_link_libraries(weighted_hetero_node_test GTest::gtest_main graphcomponents)
target_compile_features(weighted_hetero_node_test PUBLIC cxx_std_20)
if (USE_ASAN)
    target_compile_options(weighted_hetero_node_test PUBLIC -Wall -fsanitize=address)
    target_link_options(weighted_hetero_node_test PUBLIC -fsanitize=address)
else()
    target_compile_options(weighted_hetero_node_test PUBLIC -Wall)
endif()
gtest_discover_tests(weighted_hetero_node_test)

add_executable(weighted_hetero_digraph_test weighted_hetero_digraph_test.cpp)
target_link_libraries(weighted_hetero_digraph_test GTest::gtest_main graphcomponents)
target_compile_features(weighted_hetero_digraph_test PUBLIC cxx_std_20)
if (USE_ASAN)
    target_compile_options(weighted_hetero_digraph_test PUBLIC -Wall -fsanitize=address)
    target_link_options(weighted_hetero_digraph_test PUBLIC -fsanitize=address)
else()
    target_compile_options(weighted_hetero_digraph_test PUBLIC -Wall)
endif()
gtest_discover_tests(weighted_hetero_digraph_test)

add_executable(weighted_hetero_graph_test weighted_hetero_graph_test.cpp)
target_link_libraries(weighted_hetero_graph_test GTest::gtest_main graphcomponents)
target_compile_features(weighted_hetero_graph_test PUBLIC cxx_std_20)
if (USE_ASAN)
    target_compile_options(weighted_hetero_graph_test PUBLIC -Wall -fsanitize=address)
    target_link_options(weighted_hetero_graph_test PUBLIC -fsanitize=address)
else()
    target_compile_options(weighted_hetero_graph_test PUBLIC -Wall)
endif()
gtest_discover_tests(weighted_hetero_graph_test)

add_executable(weighted_supernode_test weighted_supernode_test.cpp)
target_link_libraries(weighted_supernode_test GTest::gtest_main graphcomponents)
target_compile_features(weighted_supernode_test PUBLIC cxx_std_20)
if (USE_ASAN)
    target_compile_options(weighted_supernode_test PUBLIC -Wall -fsanitize=address)
    target_link_options(weighted_supernode_test PUBLIC -fsanitize=address)
else()
    target_compile_options(weighted_supernode_test PUBLIC -Wall)
endif()
gtest_discover_tests(weighted_supernode_test)

add_executable(weighted_superdigraph_test weighted_superdigraph_test.cpp)
target_link_libraries(weighted_superdigraph_test GTest::gtest_main graphcomponents)
target_compile_features(weighted_superdigraph_test PUBLIC cxx_std_20)
if (USE_ASAN)
    target_compile_options(weighted_superdigraph_test PUBLIC -Wall -fsanitize=address)
    target_link_options(weighted_superdigraph_test PUBLIC -fsanitize=address)
else()
    target_compile_options(weighted_superdigraph_test PUBLIC -Wall)
endif()
gtest_discover_tests(weighted_superdigraph_test)

add_executable(weighted_supergraph_test weighted_supergraph_test.cpp)
target_link_libraries(weighted_supergraph_test GTest::gtest_main graphcomponents)
target_compile_features(weighted_supergraph_test PUBLIC cxx_std_20)
if (USE_ASAN)
    target_compile_options(weighted_supergraph_test PUBLIC -Wall -fsanitize=address)
    target_link_options(weighted_supergraph_test PUBLIC -fsanitize=address)
else()
    target_compile_options(weighted_supergraph_test PUBLIC -Wall)
endif()
gtest_discover_tests(weighted_supergraph_test)