include(GoogleTest)

add_executable(log_test logging_test.cpp)
target_link_libraries(log_test spdlog::spdlog)
target_compile_features(log_test PUBLIC cxx_std_20)
target_compile_options(log_test PUBLIC -Wall)

# add_executable(hello_test hello_test.cpp)
# target_link_libraries(hello_test GTest::gtest_main)
# gtest_discover_tests(hello_test)

function(add_component_test_executable name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} GTest::gtest_main graphcomponents)
    target_compile_features(${name} PUBLIC cxx_std_20)
    if (USE_ASAN)
        target_compile_options(${name} PUBLIC -Wall -fsanitize=address)
        target_link_options(${name} PUBLIC -fsanitize=address)
    else()
        target_compile_options(${name} PUBLIC -Wall)
    endif()
    gtest_discover_tests(${name})
endfunction(add_component_test_executable name)

function(add_algorithm_test_executable name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} GTest::gtest_main graphcomponents graphalgorithms)
    target_compile_features(${name} PUBLIC cxx_std_20)
    if (USE_ASAN)
        target_compile_options(${name} PUBLIC -Wall -fsanitize=address)
        target_link_options(${name} PUBLIC -fsanitize=address)
    else()
        target_compile_options(${name} PUBLIC -Wall)
    endif()
    gtest_discover_tests(${name})
endfunction(add_algorithm_test_executable name)

add_component_test_executable(weighted_node_test)
add_component_test_executable(weighted_digraph_test)
add_component_test_executable(weighted_graph_test)

add_component_test_executable(unweighted_node_test)
add_component_test_executable(unweighted_digraph_test)
add_component_test_executable(unweighted_graph_test)

add_component_test_executable(weighted_hetero_node_test)
add_component_test_executable(weighted_hetero_digraph_test)
add_component_test_executable(weighted_hetero_graph_test)

add_component_test_executable(unweighted_hetero_node_test)
add_component_test_executable(unweighted_hetero_digraph_test)
add_component_test_executable(unweighted_hetero_graph_test)

add_component_test_executable(weighted_supernode_test)
add_component_test_executable(weighted_superdigraph_test)
add_component_test_executable(weighted_supergraph_test)

add_algorithm_test_executable(pagerank_test)